Setup solid/outline buttons

--- a/components/button.sass
+++ b/components/button.sass
@@ -1,5 +1,8 @@
 .btn
   background: inherit
+  color: #414141
+
+// Size
 
 .btn-xs
   font-size: 8px
@@ -21,6 +24,8 @@
   font-size: 30px
   padding: 15px 60px
 
+// Border-Radius
+
 .btn-br-1
   border-radius: 2px
 
@@ -35,3 +40,12 @@
 
 .btn-br-5
   border-radius: 50px
+
+// Solid/Outline
+
+.btn-solid
+  background-color: #414141
+  color: #F5F5F5
+
+.btn-outline
+  border: 2px solid #414141
