--- a/components/button.sass
+++ b/components/button.sass
@@ -1,6 +1,8 @@
 .btn
   background: inherit
   color: #414141
+  cursor: pointer
+  border: 1px solid #414141
 
 // Size
 
@@ -49,3 +51,43 @@
 
 .btn-outline
   border: 2px solid #414141
+
+// Animations
+
+.btn-ani-opp
+  // Will require color variables
+
+.btn-ani-raise
+  transition: 0.2s transform, 0.2s box-shadow
+
+.btn-ani-raise:hover
+  transform: translateY(-2px)
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25)
+
+.btn-ani-raise:active
+  transform: translateY(0)
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.25)
+
+.btn-ani-switch
+  position: relative
+
+.btn-ani-switch:hover
+  .btn-ani-switch-visible
+    visibility: hidden
+    opacity: 0
+  .btn-ani-switch-hidden
+    visibility: visible
+    opacity: 1
+
+.btn-ani-switch-visible
+  transition: 0.2s visibility, 0.2s opacity
+
+.btn-ani-switch-hidden
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  backface-visibility: hidden
+  visibility: hidden
+  opacity: 0
+  transition: 0.2s visibility, 0.2s opacity
