Add color variables to buttons

--- a/components/button.sass
+++ b/components/button.sass
@@ -1,8 +1,11 @@
+@import ../config/colors
+@import ../config/spacing
+  
 .btn
   background: inherit
-  color: #414141
+  color: $color-neutral-button--dark
   cursor: pointer
-  border: 1px solid #414141
+  border: 1px solid $color-neutral-button--dark
 
 // Size
 
@@ -46,11 +49,11 @@
 // Solid/Outline
 
 .btn-solid
-  background-color: #414141
-  color: #F5F5F5
+  background-color: $color-neutral-button--dark
+  color: $color-neutral-button--light
 
 .btn-outline
-  border: 2px solid #414141
+  border: 2px solid $color-neutral-button--dark
 
 // Animations
 
