--- a/config/_colors.sass
+++ b/config/_colors.sass
@@ -44,3 +44,11 @@ $color-red-3: #DA3B34
 $color-red-4: #E26965
 $color-red-5: #F4ACAB
 $color-red-6: #FCE8E8
+
+// =================
+// COLORS BY PURPOSE
+// =================
+
+// Buttons
+$color-neutral-button--dark: $color-neutral-0
+$color-neutral-button--light: $color-neutral-6
