--- a/example/sass/general.sass
+++ b/example/sass/general.sass
@@ -1,5 +1,4 @@
 .content
-  width: 100vw
   min-height: 100vh
   display: flex
   flex-direction: column
@@ -13,7 +12,7 @@
   justify-content: flex-start
   margin-top: 32px
   margin-bottom: 16px
-  color: #414141
+  color: $color-neutral-0
 
 .header__title
   font-weight: 700
@@ -30,7 +29,7 @@
 .subheader
   font-weight: 600
   font-size: 24px
-  color: #414141
+  color: $color-neutral-0
   text-align: center
 
 .buttons
