--- a/example/sass/main.sass
+++ b/example/sass/main.sass
@@ -1,2 +1,5 @@
-@import ../../components/colors
-@import ../../components/spacing
+@import ../../config/colors
+@import ../../config/spacing
+@import ../../components/button
+@import ./reset
+@import ./general
