--- a/components/button.sass
+++ b/components/button.sass
@@ -10,24 +10,24 @@
 // Size
 
 .btn-xs
-  font-size: 8px
-  padding: 4px 16px
+  font-size: $spacing-1
+  padding: $spacing-0 $spacing-3
   
 .btn-sm
-  font-size: 12px
-  padding: 6px 24px
+  font-size: $spacing-2
+  padding: $spacing-1 $spacing-4
 
 .btn-md
-  font-size: 18px
-  padding: 9px 36px
+  font-size: $spacing-3
+  padding: $spacing-2 $spacing-5
 
 .btn-lg
-  font-size: 24px
-  padding: 12px 48px
+  font-size: $spacing-4
+  padding: $spacing-3 $spacing-6
 
 .btn-xl
-  font-size: 30px
-  padding: 15px 60px
+  font-size: $spacing-5
+  padding: $spacing-4 $spacing-7
 
 // Border-Radius
 
@@ -65,7 +65,7 @@
 
 .btn-ani-raise:hover
   transform: translateY(-2px)
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25)
+  box-shadow: 0 2px $spacing-0 rgba(0, 0, 0, 0.25)
 
 .btn-ani-raise:active
   transform: translateY(0)
