--- a/config/_colors.sass
+++ b/config/_colors.sass
@@ -34,7 +34,7 @@ $color-orange-2: #C8A741
 $color-orange-3: #F1CB66
 $color-orange-4: #F8E29F
 $color-orange-5: #FBF2D6
-$color-orange-6: #FBF2D6
+$color-orange-6: #fffcf4
 
 // Red
 $color-red-0: #5F1B18
@@ -50,5 +50,7 @@ $color-red-6: #FCE8E8
 // =================
 
 // Buttons
-$color-neutral-button--dark: $color-neutral-0
-$color-neutral-button--light: $color-neutral-6
+$color-neutral-button-font--dark: $color-neutral-0
+$color-neutral-button-font--light: $color-neutral-6
+$color-neutral-button-background--dark: $color-neutral-0
+$color-neutral-button-background--light: white
