--- a/example/sass/general.sass
+++ b/example/sass/general.sass
@@ -1,5 +1,8 @@
+@import ../../config/colors
+  
+// General
+  
 .content
-  min-height: 100vh
   display: flex
   flex-direction: column
   align-items: center
@@ -32,9 +35,25 @@
   color: $color-neutral-0
   text-align: center
 
+// Button
+
 .buttons
   display: flex
   align-items: center
   justify-content: space-evenly
   width: 800px
   max-width: 90vw
+
+// Container
+
+.container__contents
+  height: 40vh
+  width: 100%
+  background-color: $color-neutral-6
+  display: flex
+  align-items: center
+  justify-content: center
+
+.container__header
+  font-weight: 300
+  text-align: center
