--- a/example/sass/main.sass
+++ b/example/sass/main.sass
@@ -1,5 +1,6 @@
 @import ../../config/colors
 @import ../../config/spacing
 @import ../../components/button
+@import ../../components/container
 @import ./reset
 @import ./general
