--- a/example/css/styles.css
+++ b/example/css/styles.css
@@ -92,6 +92,19 @@
   opacity: 0;
   transition: 0.2s visibility, 0.2s opacity; }
 
+.container {
+  padding: 0 32px;
+  margin: 0 auto; }
+  @media (min-width: 768px) {
+    .container {
+      width: 750px; } }
+  @media (min-width: 992px) {
+    .container {
+      width: 970px; } }
+  @media (min-width: 1200px) {
+    .container {
+      width: 1170px; } }
+
 * {
   box-sizing: border-box; }
 
@@ -99,7 +112,6 @@ body {
   font-family: 'Open Sans', Arial, sans-serif; }
 
 .content {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -138,3 +150,15 @@ body {
   justify-content: space-evenly;
   width: 800px;
   max-width: 90vw; }
+
+.container__contents {
+  height: 40vh;
+  width: 100%;
+  background-color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.container__header {
+  font-weight: 300;
+  text-align: center; }
