--- a/example/sass/main.sass
+++ b/example/sass/main.sass
@@ -2,5 +2,6 @@
 @import ../../config/spacing
 @import ../../components/button
 @import ../../components/container
+@import ../../components/header
 @import ./reset
 @import ./general
