--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -139,6 +139,89 @@
 .header-dark-5 {
   font-size: 96px; }
 
+.placeholder {
+  width: 640px;
+  max-width: 90vw;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start; }
+
+.ph-line {
+  background-color: #f5f5f5;
+  height: 16px;
+  margin-bottom: 12px; }
+
+.ph-line:nth-of-type(1) {
+  width: 100%; }
+
+.ph-line:nth-of-type(2) {
+  width: 78%; }
+
+.ph-line:nth-of-type(3) {
+  width: 83%; }
+
+.ph-line:nth-of-type(4) {
+  width: 74%; }
+
+.ph-line:nth-of-type(5) {
+  width: 87%; }
+
+.ph-line:nth-of-type(6) {
+  width: 81%; }
+
+.ph-line:nth-of-type(7) {
+  width: 78%; }
+
+.ph-line:nth-of-type(8) {
+  width: 72%; }
+
+.ph-line:nth-of-type(9) {
+  width: 94%; }
+
+.ph-line:nth-of-type(10) {
+  width: 76%; }
+
+.ph-header {
+  margin-bottom: 8px;
+  width: 100%; }
+  .ph-header .ph-line {
+    height: 24px; }
+
+.ph-paragraph {
+  margin-bottom: 4px;
+  width: 100%; }
+  .ph-paragraph .ph-line {
+    height: 16px; }
+
+.ph-image {
+  background-color: #f5f5f5;
+  height: 100%;
+  width: 100%; }
+
+.ph-image-paragraph {
+  margin-bottom: 4px;
+  width: 100%;
+  position: relative; }
+  .ph-image-paragraph .ph-image {
+    height: 72px;
+    width: 72px;
+    margin-right: 16px; }
+  .ph-image-paragraph .ph-line {
+    height: 16px; }
+  .ph-image-paragraph .ph-line:nth-of-type(1),
+  .ph-image-paragraph .ph-line:nth-of-type(2),
+  .ph-image-paragraph .ph-line:nth-of-type(3) {
+    margin-left: 88px; }
+  .ph-image-paragraph .ph-lines {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0; }
+
 * {
   box-sizing: border-box; }
 
@@ -219,3 +302,7 @@ body {
   .headers__right h4 {
     text-align: center;
     margin: 8px; }
+
+.image-container {
+  height: 300px;
+  width: 300px; }
