Setup typography system

--- a/components/button.sass
+++ b/components/button.sass
@@ -13,23 +13,23 @@ $button-font-color: $color-neutral-button-font--dark
 // Size
 
 .btn-xs
-  font-size: $spacing-1
+  font-size: $font-size-0
   padding: $spacing-0 $spacing-3
   
 .btn-sm
-  font-size: $spacing-2
+  font-size: $font-size-1
   padding: $spacing-1 $spacing-4
 
 .btn-md
-  font-size: $spacing-3
+  font-size: $font-size-2
   padding: $spacing-2 $spacing-5
 
 .btn-lg
-  font-size: $spacing-4
+  font-size: $font-size-4
   padding: $spacing-3 $spacing-6
 
 .btn-xl
-  font-size: $spacing-5
+  font-size: $font-size-5
   padding: $spacing-4 $spacing-7
 
 // Border-Radius
