--- a/components/header.sass
+++ b/components/header.sass
@@ -3,31 +3,31 @@
 .header-light-3,
 .header-light-4,
 .header-light-5
-  font-weight: 400
+  font-weight: $font-weight-normal
 
 .header-dark-1,
 .header-dark-2,
 .header-dark-3,
 .header-dark-4,
 .header-dark-5
-  font-weight: 700
+  font-weight: $font-weight-bold
 
 .header-light-1,
 .header-dark-1
-  font-size: $spacing-4
+  font-size: $font-size-5
 
 .header-light-2,
 .header-dark-2
-  font-size: $spacing-5
+  font-size: $font-size-6
 
 .header-light-3,
 .header-dark-3
-  font-size: $spacing-6
+  font-size: $font-size-7
 
 .header-light-4,
 .header-dark-4
-  font-size: $spacing-7
+  font-size: $font-size-8
 
 .header-light-5,
 .header-dark-5
-  font-size: $spacing-8
+  font-size: $font-size-9
