--- a/docs/sass/general.sass
+++ b/docs/sass/general.sass
@@ -18,26 +18,26 @@
   color: $color-neutral-0
 
 .content__title
-  font-weight: 700
-  font-size: 32px
+  font-weight: $font-weight-bold
+  font-size: $font-size-6
 
 .content__title--main
-  font-size: 48px
+  font-size: $font-size-8
 
 .content__info
   font-family: 'Roboto', Arial, Helvetica, sans-serif
-  font-weight: 300
-  font-size: 18px
+  font-weight: $font-weight-light
+  font-size: $font-size-3
 
 .content__info--main
-  font-size: 24px
+  font-size: $font-size-5
 
 .section
   margin: 16px auto
 
 .subheader
-  font-weight: 600
-  font-size: 24px
+  font-weight: $font-weight-semibold
+  font-size: $font-size-5
   color: $color-neutral-0
   text-align: center
 
@@ -61,7 +61,7 @@
   justify-content: center
 
 .container__header
-  font-weight: 300
+  font-weight: $font-weight-light
   text-align: center
 
 // Headers
