--- a/docs/sass/main.sass
+++ b/docs/sass/main.sass
@@ -1,8 +1,9 @@
 @import ../../config/colors
 @import ../../config/spacing
+@import ../../config/reset
+@import ../../config/typography
 @import ../../components/button
 @import ../../components/container
 @import ../../components/header
 @import ../../components/placeholder
-@import ./reset
 @import ./general
