--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -159,34 +159,34 @@ body {
   margin-bottom: 12px; }
 
 .ph-line:nth-of-type(1) {
-  width: 86%; }
+  width: 89%; }
 
 .ph-line:nth-of-type(2) {
-  width: 84%; }
+  width: 92%; }
 
 .ph-line:nth-of-type(3) {
   width: 72%; }
 
 .ph-line:nth-of-type(4) {
-  width: 94%; }
-
-.ph-line:nth-of-type(5) {
-  width: 96%; }
-
-.ph-line:nth-of-type(6) {
-  width: 80%; }
-
-.ph-line:nth-of-type(7) {
-  width: 75%; }
-
-.ph-line:nth-of-type(8) {
   width: 79%; }
 
+.ph-line:nth-of-type(5) {
+  width: 82%; }
+
+.ph-line:nth-of-type(6) {
+  width: 81%; }
+
+.ph-line:nth-of-type(7) {
+  width: 95%; }
+
+.ph-line:nth-of-type(8) {
+  width: 92%; }
+
 .ph-line:nth-of-type(9) {
-  width: 85%; }
+  width: 72%; }
 
 .ph-line:nth-of-type(10) {
-  width: 76%; }
+  width: 71%; }
 
 .ph-header {
   margin-bottom: 8px;
@@ -228,11 +228,33 @@ body {
     top: 0;
     left: 0; }
 
+.shadow-sm {
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25); }
+
+.shadow-md {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25); }
+
+.shadow-lg {
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25); }
+
+.shadow-down {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25); }
+
+.shadow-up {
+  box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.25); }
+
+.shadow-left {
+  box-shadow: -2px 0px 4px rgba(0, 0, 0, 0.25); }
+
+.shadow-right {
+  box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.25); }
+
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  margin: 16px auto; }
 
 .content__header {
   display: flex;
@@ -306,3 +328,16 @@ body {
 .image-container {
   height: 300px;
   width: 300px; }
+
+.shadow-boxes {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly; }
+
+.shadow-box {
+  height: 200px;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 16px; }
