--- a/docs/sass/main.sass
+++ b/docs/sass/main.sass
@@ -6,4 +6,5 @@
 @import ../../components/container
 @import ../../components/header
 @import ../../components/placeholder
+@import ../../components/shadow
 @import ./general
