--- a/docs/sass/main.sass
+++ b/docs/sass/main.sass
@@ -7,4 +7,5 @@
 @import ../../components/header
 @import ../../components/placeholder
 @import ../../components/shadow
+@import ../../components/alert
 @import ./general
