--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2,7 +2,8 @@
   box-sizing: border-box; }
 
 body {
-  font-family: 'Open Sans', Arial, sans-serif; }
+  font-family: 'Open Sans', Arial, sans-serif;
+  margin: 0; }
 
 .btn {
   background: white;
@@ -159,34 +160,34 @@ body {
   margin-bottom: 12px; }
 
 .ph-line:nth-of-type(1) {
-  width: 99%; }
-
-.ph-line:nth-of-type(2) {
-  width: 91%; }
-
-.ph-line:nth-of-type(3) {
-  width: 93%; }
-
-.ph-line:nth-of-type(4) {
-  width: 76%; }
-
-.ph-line:nth-of-type(5) {
   width: 89%; }
 
+.ph-line:nth-of-type(2) {
+  width: 82%; }
+
+.ph-line:nth-of-type(3) {
+  width: 77%; }
+
+.ph-line:nth-of-type(4) {
+  width: 83%; }
+
+.ph-line:nth-of-type(5) {
+  width: 95%; }
+
 .ph-line:nth-of-type(6) {
-  width: 92%; }
+  width: 88%; }
 
 .ph-line:nth-of-type(7) {
-  width: 86%; }
+  width: 82%; }
 
 .ph-line:nth-of-type(8) {
-  width: 78%; }
+  width: 90%; }
 
 .ph-line:nth-of-type(9) {
-  width: 97%; }
+  width: 88%; }
 
 .ph-line:nth-of-type(10) {
-  width: 73%; }
+  width: 91%; }
 
 .ph-header {
   margin-bottom: 8px;
@@ -323,6 +324,109 @@ body {
   font-size: 24px;
   color: #282828;
   text-align: center; }
+
+.nav {
+  height: 70px;
+  width: 100vw;
+  padding: 0 256px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 3; }
+
+.nav__background {
+  width: 100vw;
+  height: 70px;
+  background: linear-gradient(to bottom, #71D5D3, #40ADA3);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0; }
+
+.nav__brand {
+  color: white;
+  font-size: 30px;
+  font-weight: 400;
+  font-family: Open Sans;
+  text-decoration: none; }
+
+.nav__menu {
+  height: 100%;
+  width: 49px; }
+
+.nav__bar {
+  height: 3px;
+  width: 100%;
+  margin: 15px 0;
+  background-color: white; }
+
+.nav__bar--1,
+.nav__bar--3 {
+  width: 50%; }
+
+.nav__bar--1 {
+  margin-left: auto;
+  transform-origin: top right;
+  transition: 0.3s transform; }
+
+.nav__bar--2 {
+  transition: 0.3s transform; }
+
+.nav__bar--3 {
+  transform-origin: bottom left;
+  transition: 0.3s transform; }
+
+.nav__menu--active .nav__bar--1 {
+  transform: translate(-8px, 1px) rotate(-45deg); }
+
+.nav__menu--active .nav__bar--2 {
+  transform: rotate(45deg); }
+
+.nav__menu--active .nav__bar--3 {
+  transform: translate(8px, -1px) rotate(-45deg); }
+
+.hero {
+  background: linear-gradient(to bottom, #71D5D3, #40ADA3);
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 96px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.hero__header {
+  color: white;
+  font-family: Open Sans;
+  font-size: 60px;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 16px; }
+
+.hero__subheader {
+  color: white;
+  font-family: Roboto;
+  font-size: 30px;
+  font-weight: 300;
+  margin: 0; }
+
+.hero__button {
+  background: linear-gradient(to bottom, #71D5D3, #40ADA3);
+  border: 2px solid white;
+  font-family: Open Sans;
+  font-weight: 300;
+  font-size: 24px;
+  color: white;
+  border-radius: 5px;
+  margin-top: 32px;
+  padding: 8px 64px; }
 
 .buttons {
   display: flex;
