--- a/docs/sass/general.sass
+++ b/docs/sass/general.sass
@@ -1,5 +1,6 @@
 @import ../../config/colors
 @import ../../config/spacing
+@import ../../config/typography
   
 // General
   
@@ -42,6 +43,112 @@
   font-size: $font-size-5
   color: $color-neutral-0
   text-align: center
+
+// Nav
+
+.nav
+  height: 70px
+  width: 100vw
+  padding: 0 $spacing-11
+  display: flex
+  align-items: center
+  justify-content: space-between
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+  z-index: 3
+
+.nav__background
+  width: 100vw
+  height: 70px
+  background: linear-gradient(to bottom, $color-green-4, $color-green-3)
+  position: fixed
+  top: 0
+  left: 0
+  right: 0
+
+.nav__brand
+  color: white
+  font-size: $font-size-6
+  font-weight: $font-weight-normal
+  font-family: Open Sans
+  text-decoration: none
+
+.nav__menu
+  height: 100%
+  width: 49px
+
+.nav__bar
+  height: 3px
+  width: 100%
+  margin: 15px 0
+  background-color: white
+
+.nav__bar--1,
+.nav__bar--3
+  width: 50%
+
+.nav__bar--1
+  margin-left: auto
+  transform-origin: top right
+  transition: 0.3s transform
+
+.nav__bar--2
+  transition: 0.3s transform
+
+.nav__bar--3
+  transform-origin: bottom left
+  transition: 0.3s transform
+
+.nav__menu--active
+  .nav__bar--1
+    transform: translate(-8px, 1px) rotate(-45deg)
+  .nav__bar--2
+    transform: rotate(45deg)
+  .nav__bar--3
+    transform: translate(8px, -1px) rotate(-45deg)
+
+// Hero
+
+.hero
+  background: linear-gradient(to bottom, $color-green-4, $color-green-3)
+  z-index: 2
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  padding: $spacing-8 0
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: center
+
+.hero__header
+  color: white
+  font-family: Open Sans
+  font-size: $font-size-9
+  font-weight: $font-weight-normal
+  margin-top: 0
+  margin-bottom: $spacing-3
+
+.hero__subheader
+  color: white
+  font-family: Roboto
+  font-size: $font-size-6
+  font-weight: $font-weight-light
+  margin: 0
+
+.hero__button
+  background: linear-gradient(to bottom, $color-green-4, $color-green-3)
+  border: 2px solid white
+  font-family: Open Sans
+  font-weight: $font-weight-light
+  font-size: $font-size-5
+  color: white
+  border-radius: 5px
+  margin-top: $spacing-5
+  padding: $spacing-1 $spacing-7
 
 // Button
 
@@ -105,6 +212,3 @@
   align-items: center
   justify-content: center
   margin: $spacing-3
-
-// Alerts
-
