--- a/docs/sass/general.sass
+++ b/docs/sass/general.sass
@@ -114,7 +114,7 @@
 .hero
   background: linear-gradient(to bottom, $color-green-4, $color-green-3)
   z-index: 2
-  position: absolute
+  position: relative
   top: 0
   left: 0
   right: 0
