--- a/docs/sass/general.sass
+++ b/docs/sass/general.sass
@@ -21,8 +21,9 @@
   color: $color-neutral-0
 
 .content__title
-  font-weight: $font-weight-bold
+  font-weight: $font-weight-normal
   font-size: $font-size-6
+  margin: 0
 
 .content__title--main
   font-size: $font-size-8
@@ -39,7 +40,7 @@
   margin: $spacing-3 auto
 
 .subheader
-  font-weight: $font-weight-semibold
+  font-weight: $font-weight-normal
   font-size: $font-size-5
   color: $color-neutral-0
   text-align: center
@@ -115,9 +116,6 @@
   background: linear-gradient(to bottom, $color-green-4, $color-green-3)
   z-index: 2
   position: relative
-  top: 0
-  left: 0
-  right: 0
   padding: $spacing-8 0
   display: flex
   flex-direction: column
