Create functional nav drawer

--- a/components/placeholder.sass
+++ b/components/placeholder.sass
@@ -66,6 +66,7 @@ $ph-paragraph-image-margin-right: $spacing-3
   margin-bottom: $spacing-0
   width: 100%
   position: relative
+  z-index: -1
 
   .ph-image
     height: $ph-paragraph-image-width
