Separate docs/sass into multiple files

--- a/docs/sass/main.sass
+++ b/docs/sass/main.sass
@@ -9,3 +9,10 @@
 @import ../../components/shadow
 @import ../../components/alert
 @import ./general
+@import ./buttons
+@import ./container
+@import ./headers
+@import ./hero
+@import ./nav
+@import ./placeholders
+@import ./shadows
