--- a/docs/sass/buttons.sass
+++ b/docs/sass/buttons.sass
@@ -9,3 +9,8 @@
   justify-content: space-evenly
   width: 800px
   max-width: 90vw
+  +media($breakpoint-md)
+    flex-direction: column
+
+  .btn
+    margin-top: $spacing-2
