--- a/docs/sass/nav.sass
+++ b/docs/sass/nav.sass
@@ -15,6 +15,8 @@
   left: 0
   right: 0
   z-index: 3
+  +media($breakpoint-sm)
+    padding: 0 $spacing-3
 
 .nav__background
   width: 100vw
@@ -24,6 +26,7 @@
   top: 0
   left: 0
   right: 0
+  z-index: 1
 
 .nav__brand
   color: white
