--- a/components/placeholder.sass
+++ b/components/placeholder.sass
@@ -5,6 +5,7 @@ $ph-line-height: $spacing-3
 $ph-line-margin-bottom: $spacing-2
 $ph-paragraph-image-width: $ph-line-height * 3 + $ph-line-margin-bottom * 2
 $ph-paragraph-image-margin-right: $spacing-3
+$ph-image-line-margin-left: $ph-paragraph-image-width + $ph-paragraph-image-margin-right
   
 .placeholder
   width: $spacing-14
@@ -61,6 +62,7 @@ $ph-paragraph-image-margin-right: $spacing-3
   background-color: $color-neutral-6
   height: 100%
   width: 100%
+  max-width: 90vw
 
 .ph-image-paragraph
   margin-bottom: $spacing-0
@@ -79,7 +81,14 @@ $ph-paragraph-image-margin-right: $spacing-3
   .ph-line:nth-of-type(1),
   .ph-line:nth-of-type(2),
   .ph-line:nth-of-type(3)
-    margin-left: $ph-paragraph-image-width + $ph-paragraph-image-margin-right
+    margin-left: $ph-image-line-margin-left
+
+  .ph-line:nth-of-type(1)
+    width: calc(#{random(30) + 70%} - #{$ph-image-line-margin-left})
+  .ph-line:nth-of-type(2)
+    width: calc(#{random(30) + 70%} - #{$ph-image-line-margin-left})
+  .ph-line:nth-of-type(3)
+    width: calc(#{random(30) + 70%} - #{$ph-image-line-margin-left})
 
   .ph-lines
     display: flex
