--- a/docs/sass/footer.sass
+++ b/docs/sass/footer.sass
@@ -1,10 +1,12 @@
 .footer
-  height: 70px
+  height: 120px
   width: 100vw
   display: flex
   align-items: center
   justify-content: space-evenly
   background: linear-gradient(to bottom, $color-green-4, $color-green-3)
+  +media($breakpoint-sm)
+    flex-direction: column
 
 .footer__info,
 .footer__link
