--- a/docs/sass/general.sass
+++ b/docs/sass/general.sass
@@ -13,6 +13,7 @@ html
   flex-direction: column
   align-items: center
   justify-content: flex-start
+  padding: $spacing-2
   padding-top: $spacing-6
 
 .content__header
@@ -36,6 +37,7 @@ html
   font-family: 'Roboto', Arial, Helvetica, sans-serif
   font-weight: $font-weight-light
   font-size: $font-size-3
+  text-align: center
 
 .content__info--main
   font-size: $font-size-5
