--- a/docs/sass/hero.sass
+++ b/docs/sass/hero.sass
@@ -7,7 +7,7 @@
   background: linear-gradient(to bottom, $color-green-4, $color-green-3)
   z-index: 2
   position: relative
-  padding: $spacing-8 0
+  padding: $spacing-8 $spacing-2
   display: flex
   flex-direction: column
   align-items: center
@@ -20,13 +20,19 @@
   font-weight: $font-weight-normal
   margin-top: 0
   margin-bottom: $spacing-3
+  text-align: center
+  +media($breakpoint-sm)
+    font-size: $font-size-7
 
 .hero__subheader
   color: white
   font-family: Roboto
+  text-align: center
   font-size: $font-size-6
   font-weight: $font-weight-light
   margin: 0
+  +media($breakpoint-sm)
+    font-size: $font-size-4
 
 .hero__button
   background: linear-gradient(to bottom, $color-green-4, $color-green-3)
