--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -160,34 +160,34 @@ body {
   margin-bottom: 12px; }
 
 .ph-line:nth-of-type(1) {
-  width: 95%; }
+  width: 72%; }
 
 .ph-line:nth-of-type(2) {
-  width: 81%; }
-
-.ph-line:nth-of-type(3) {
-  width: 81%; }
-
-.ph-line:nth-of-type(4) {
-  width: 93%; }
-
-.ph-line:nth-of-type(5) {
-  width: 86%; }
-
-.ph-line:nth-of-type(6) {
-  width: 88%; }
-
-.ph-line:nth-of-type(7) {
-  width: 71%; }
-
-.ph-line:nth-of-type(8) {
   width: 98%; }
 
+.ph-line:nth-of-type(3) {
+  width: 76%; }
+
+.ph-line:nth-of-type(4) {
+  width: 78%; }
+
+.ph-line:nth-of-type(5) {
+  width: 96%; }
+
+.ph-line:nth-of-type(6) {
+  width: 100%; }
+
+.ph-line:nth-of-type(7) {
+  width: 97%; }
+
+.ph-line:nth-of-type(8) {
+  width: 72%; }
+
 .ph-line:nth-of-type(9) {
-  width: 80%; }
+  width: 85%; }
 
 .ph-line:nth-of-type(10) {
-  width: 90%; }
+  width: 95%; }
 
 .ph-header {
   margin-bottom: 8px;
@@ -223,11 +223,11 @@ body {
   .ph-image-paragraph .ph-line:nth-of-type(3) {
     margin-left: 88px; }
   .ph-image-paragraph .ph-line:nth-of-type(1) {
-    width: calc(87% - 88px); }
+    width: calc(73% - 88px); }
   .ph-image-paragraph .ph-line:nth-of-type(2) {
-    width: calc(91% - 88px); }
+    width: calc(98% - 88px); }
   .ph-image-paragraph .ph-line:nth-of-type(3) {
-    width: calc(78% - 88px); }
+    width: calc(95% - 88px); }
   .ph-image-paragraph .ph-lines {
     display: flex;
     flex-direction: column;
@@ -293,6 +293,49 @@ body {
   border: 1px solid #DA3B34;
   color: #5F1B18; }
 
+.spinner {
+  width: 8px;
+  height: 8px;
+  margin: 24px auto;
+  opacity: 0.5;
+  border-radius: 50%;
+  box-shadow: 0 -14px 0 rgba(0, 0, 0, 0.8), 10px -10px 0 rgba(0, 0, 0, 0.7), 14px 0px 1px rgba(0, 0, 0, 0.6), 10px 10px 1px rgba(0, 0, 0, 0.5), 0px 14px 2px rgba(0, 0, 0, 0.4), -10px 10px 2px rgba(0, 0, 0, 0.3), -14px 0px 3px rgba(0, 0, 0, 0.2), -10px -10px 3px rgba(0, 0, 0, 0.1);
+  transform-origin: 50%;
+  animation: spin 0.5s steps(8) infinite; }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0); }
+  100% {
+    transform: rotate(360deg); } }
+
+.dots {
+  display: flex; }
+
+.dot {
+  height: 5px;
+  width: 5px;
+  background-color: black;
+  border-radius: 50%;
+  margin: 2px; }
+
+.dot--1 {
+  animation: jump 0.8s infinite; }
+
+.dot--2 {
+  animation: jump 0.8s infinite 0.1s; }
+
+.dot--3 {
+  animation: jump 0.8s infinite 0.2s; }
+
+@keyframes jump {
+  0% {
+    transform: translateY(0); }
+  30% {
+    transform: translateY(-150%); }
+  60% {
+    transform: translateY(0); } }
+
 html {
   scroll-behavior: smooth; }
 
@@ -331,7 +374,10 @@ html {
   font-size: 24px; }
 
 .section {
-  margin: 16px auto; }
+  margin: 16px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .subheader {
   font-weight: 400;
