--- a/docs/sass/general.sass
+++ b/docs/sass/general.sass
@@ -44,6 +44,9 @@ html
 
 .section
   margin: $spacing-3 auto
+  display: flex
+  flex-direction: column
+  align-items: center
 
 .subheader
   font-weight: $font-weight-normal
