--- a/docs/sass/main.sass
+++ b/docs/sass/main.sass
@@ -8,6 +8,7 @@
 @import ../../components/placeholder
 @import ../../components/shadow
 @import ../../components/alert
+@import ../../components/loader
 @import ./general
 @import ./buttons
 @import ./container
